--- a/index.html
+++ b/index.html
@@ -168,13 +168,8 @@
                 </div>
                 <!-- end about-expertise -->
                 <div class="row about-timelines" data-animate-block>
-
                     <div class="column lg-6 tab-12">
-
-                        <h2 class="text-pretitle" data-animate-el>
-                            Projects
-                        </h2>
-
+                        <h2 class="text-pretitle" data-animate-el> Projects </h2>
                         <div class="timeline" data-animate-el>
 
                             <div class="timeline__block">
@@ -215,6 +210,22 @@
                             <div class="timeline__block">
                                 <div class="timeline__bullet"></div>
                                 <div class="timeline__header">
+                                    <h4 class="timeline__title">
+                                        Event Management
+                                        <a href="https://github.com/Gayathri-Nandakumar16/event_management" target="_blank" class="github-link">
+                                            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" class="github-icon">
+                                        </a>
+                                    </h4>
+                                    <h5 class="timeline__meta">HTML&CSS,Js,PHP</h5>
+                                    <p class="timeline__timeframe">January</p>
+                                </div>
+                                <div class="timeline__desc">
+                                    <p>Build a responsive event management website with XAMPP localhost that creates a table in the database dynamically, helping users have their separate dashboards.</p>
+                                </div>
+                            </div>
+                            <div class="timeline__block">
+                                <div class="timeline__bullet"></div>
+                                <div class="timeline__header">
                                     <h4 class="timeline__title">Infrastructure as a Code</h4>
                                     <h5 class="timeline__meta">AWS (Terraform)</h5>
                                     <p class="timeline__timeframe">October</p>
@@ -222,23 +233,59 @@
                                 <div class="timeline__desc">
                                     <p>Build a full infrastructure of AWS using Terraform</p>
                                 </div>
-                            </div>
-                            <div class="timeline__block">
-                                <div class="timeline__bullet"></div>
-                                <div class="timeline__header">
-                                    <h4 class="timeline__title">Event Management
-                                        <h4>
-                                            <h5 class="timeline__meta">HTML&CSS,Js,PHP</h5>
-                                            <p class="timeline__timeframe">January</p>
+                                <div class="timeline__block">
+                                    <div class="timeline__bullet"></div>
+                                    <div class="timeline__header">
+                                        <h4 class="timeline__title">
+                                            Deploy a web application in Cloud
+                                            <a href="https://github.com/Gayathri-Nandakumar16/Brainwave_Matrix_Intern-/tree/main/TASK1" target="_blank" class="github-link">
+                                                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" class="github-icon">
+                                            </a>
+                                        </h4>
+                                        <h5 class="timeline__meta">AWS EC2, S3</h5>
+                                        <p class="timeline__timeframe">February</p>
+                                    </div>
+                                    <div class="timeline__desc">
+                                        <p>Successfully deployed a web application using AWS EC2, S3, ensuring scalability and efficiency.</p>
+                                    </div>
                                 </div>
-                                <div class="timeline__desc">
-                                    <p>Build a responsive event management website with xampp localhost that creates table to the database dynamically which helps the user to have their seperate dashboard</p>
-                                </div>
-                            </div>
 
+                                <div class="timeline__block">
+                                    <div class="timeline__bullet"></div>
+                                    <div class="timeline__header">
+                                        <h4 class="timeline__title">
+                                            Cloud Storage Setup
+                                            <a href="https://github.com/Gayathri-Nandakumar16/cloud-storage-setup" target="_blank" class="github-link">
+                                                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" class="github-icon">
+                                            </a>
+                                        </h4>
+                                        <h5 class="timeline__meta">AWS S3</h5>
+                                        <p class="timeline__timeframe">February</p>
+                                    </div>
+                                    <div class="timeline__desc">
+                                        <p>Created an S3 bucket, uploaded files, and configured access permissions for secure data storage.</p>
+                                    </div>
+                                </div>
+
+                                <div class="timeline__block">
+                                    <div class="timeline__bullet"></div>
+                                    <div class="timeline__header">
+                                        <h4 class="timeline__title">
+                                            Cloud Monitoring and Alerts
+                                            <a href="https://github.com/Gayathri-Nandakumar16/CLOUD-MONITORING-AND-ALERTS/tree/main/Task%202" target="_blank" class="github-link">
+                                                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" class="github-icon">
+                                            </a>
+                                        </h4>
+                                        <h5 class="timeline__meta">AWS CloudWatch, SNS</h5>
+                                        <p class="timeline__timeframe">February</p>
+                                    </div>
+                                    <div class="timeline__desc">
+                                        <p>Configured essential metrics such as CPU utilization, memory usage, and network traffic. Built a robust alerting system that notifies teams in real-time whenever performance thresholds are breached using SNS.</p>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
-                        <!-- end timeline -->
-
                     </div>
                     <!-- end column -->
 
