--- a/index.html
+++ b/index.html
@@ -283,6 +283,38 @@
                                         <p>Configured essential metrics such as CPU utilization, memory usage, and network traffic. Built a robust alerting system that notifies teams in real-time whenever performance thresholds are breached using SNS.</p>
                                     </div>
                                 </div>
+                                <div class="timeline__block">
+                                    <div class="timeline__bullet"></div>
+                                    <div class="timeline__header">
+                                        <h4 class="timeline__title">
+                                            Multi Cloud Architecture
+                                            <a href="https://github.com/Gayathri-Nandakumar16/MULTI-CLOUD-ARCHITECTURE" target="_blank" class="github-link">
+                                                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" class="github-icon">
+                                            </a>
+                                        </h4>
+                                        <h5 class="timeline__meta">AWS & GCP</h5>
+                                        <p class="timeline__timeframe">February</p>
+                                    </div>
+                                    <div class="timeline__desc">
+                                        <p>Designed a multi cloud architecture where services are distributed among two cloud providers.</p>
+                                    </div>
+                                </div>
+                                <div class="timeline__block">
+                                    <div class="timeline__bullet"></div>
+                                    <div class="timeline__header">
+                                        <h4 class="timeline__title">
+                                            Cloud Security Implementation
+                                            <a href="https://github.com/Gayathri-Nandakumar16/CLOUD-SECURITY-IMPLEMENTATION" target="_blank" class="github-link">
+                                                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" class="github-icon">
+                                            </a>
+                                        </h4>
+                                        <h5 class="timeline__meta">AWS</h5>
+                                        <p class="timeline__timeframe">February</p>
+                                    </div>
+                                    <div class="timeline__desc">
+                                        <p>Implement IAM policies, Secure storage and data encrption on a cloud platform.</p>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
